# moped

./: Cargo.toml  README.md
backend/: Cargo.toml  NotFound.xcf  README.md
backend/src/: artwork.rs  main.rs  mdb.rs  pathmetada.rs  player.rs  queue.rs  settings.rs
frontend/: Cargo.toml  Makefile.toml  index.html  mycss.css
frontend/src/: lib.rs
frontend/src/pages/: browser.rs  mod.rs  settings.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: main.rs  player.rs
