[package]
name = "moped"
version = "0.1.0"
authors = ["Johan Kristell <johan@jott.se>"]
edition = "2018"
description = "Moped backend server"
license = "MIT"

[dependencies]
async-mpd = { path = "../../async-mpd" }
femme = "2.1.0"
log = "0.4.8"
tide = "0.14"
surf = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
async-std = { version = "1.6.0", features = ["attributes"] }
moped-shared = { path = "../shared", version = "0.1" }
uuid = { version = "0.8.1", features = ["serde"] }
bincode = "1.3.1"
smart-default = "0.6.0"