[package]
name = "moped-backend"
version = "0.1.0"
authors = ["Johan Kristell <johan@jott.se>"]
edition = "2018"
keywords = ["mpd"]
license = "MIT OR Apache-2.0"
description = "Mpd to json"
categories = ["network-programming"]
repository = "https://github.com/jkristell/moped"
readme = "README.md"
workspace = ".."

[dependencies]
anyhow = "1.0.65"
thiserror = "1.0.37"
async-mpd = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
axum = "0.6.0-rc.2"
tokio = { version = "1.0", features = ["full"] }
tokio-rayon = "2.1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "tracing-log", "time", "json"] }
tracing-futures = "0.2"
tracing-log = "0.1"
tracing-appender = "0.2.0"
tower = "0.4"
hyper = "0.14"
tower-http = { version = "0.3.4", features = ["trace", "cors" ] }
