[package]
version = "0.1.0"
name = "moped-frontend"
repository = "https://github.com/jkristell/moped"
authors = ["Johan Kristell <johan@jott.se"]
description = "Mpd frontend built with seed"
categories = ["networking"]
license = "MIT"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.12"

[dependencies]
seed = { git = "https://github.com/seed-rs/seed", rev = "b25cf59" }
serde = { version = "^1.0.85", features = ['derive'] }
shared = { path = "../shared" }


[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
